# longthin

./: .gitignore  LICENSE  README.md  camera.py  distortion.py  estimator.py  geometry.py  ltdrawlist.py  ltparams.py  ltrenderer.py  main.py  marker.py  pose.py  pyproject.toml  raspicam.py  setup.py
config/: default.yaml
defs/: generate_defs.py  generate_messages.py  generate_parameters.py  messages.yaml  parameters.yaml
examples/: parking.py  parking_detection.py  planner.py  purepursuit.py
firmware/back/: back.ino  sketch.yaml
firmware/chacha/: chacha.c  chacha.h  main.c
firmware/dummy/: dummy.ino
firmware/front/: .clang-format  front.ino
firmware/hmc5883l/: hmc5883l.cpp  hmc5883l.h
firmware/ltpacket/: ltpacket.c  ltpacket.cpp  ltpacket.h  ltpacket_def.h  ltpacket_type.h  ltparams.c  ltparams.h  ltparams_def.h  packet.c  packet.cpp  packet.h
firmware/madgwick/: madgwick.cpp  madgwick.h
firmware/madgwick_ahrs/: madgwick_ahrs.c  madgwick_ahrs.h
firmware/mahony_ahrs/: mahony_ahrs.c  mahony_ahrs.h
firmware/mpu6050/: mpu6050.cpp  mpu6050.h
firmware/qcomp/: qcomp.c  qcomp.h  qmath.h
firmware/wireless_relay/: sketch.yaml  wireless_relay.ino
longthin/: __init__.py  abg.py  basic_sim.py  camera.py  config.py  default.yaml  dubins_controller.py  estimator.py  lane_detector.py  ltdrawlist.py  ltparams.py  ltrenderer.py  marker.py  node.py  notify.py  park_detector.py  parking_controller.py  parking_estimator.py  planner.py  pose.py  raspicam.py  rate.py  shm.py  sim.py  test.py  video_source.py
longthin/calibration/: __init__.py  accel.py  mag.py
longthin/config/: __init__.py  default.yaml  gcs.yaml  rasp.yaml  sim.yaml
longthin/controller/: __init__.py  controller_abc.py  dubins.py  goal.py  highlevel.py  manual.py  parking.py  setpoint.py  setpoint_pos.py  vision.py
msg/: generate_defs.py  messages.yaml
(+69 files in other folders)
